# oracle-lens

./: .gitignore  CURRENT_STATUS.md  EXECUTION.md  PLAN.md  README.md  pyproject.toml
configs/: qwen3-8b.yaml
configs/accelerate/: fsdp_8gpu.yaml
ops/: pull_m1.py  pull_m2.py  pull_m3.py  setup_m1.sh  upload_artifact.py  upload_large_folder.py  upload_run.py  vast_ledger.tsv
src/oracle_lens/: cli.py  config.py  nnls.py  rendering.py  runs.py  training_utils.py
src/oracle_lens/activations/: collect.py  fit.py  layer_check.py  store.py  whitening.py
src/oracle_lens/corpus/: generate.py  merge.py  positions.py  splits.py  verify.py  wildchat.py
src/oracle_lens/eval/: baselines.py  fve.py  gallery.py
src/oracle_lens/eval/probes/: probes.yaml
src/oracle_lens/oracle/: data.py  decode.py  evaluate.py  grpo.py  injection.py  prompts.py  sft.py
src/oracle_lens/reconstructor/: data.py  evaluate.py  model.py  train.py
src/oracle_lens/teacher/: decompose.py  dictionary.py  nnomp.py
tests/: conftest.py  test_config_and_splits.py  test_corpus_and_recon.py  test_nnls.py  test_nnomp.py  test_oracle_prompts_injection.py  test_positions_and_store.py  test_whitening.py
